<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6614d"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup3_text_top"
            android:layout_marginTop="10dp"
            android:textSize="8pt"
            android:textColor="#fff"
            android:width="135pt"
            android:id="@+id/textView"
           />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input"
            android:layout_marginTop="10pt"
            android:hint="@string/phone_text"
            android:textSize="12pt"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/phoneEdiText"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup3_text_center"
            android:layout_marginTop="10dp"
            android:textSize="8pt"
            android:textColor="#fff"
            android:width="135pt"
            android:id="@+id/textView"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup3_text_bottom"
            android:layout_marginTop="5dp"
            android:textSize="6pt"
            android:textColor="#fee7b8"
            android:width="135pt"
            android:id="@+id/textView"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_btn"
            android:layout_marginTop="10pt"
            android:textColor="#fff"
            android:textSize="14pt"
            android:text="@string/sign_up"
            android:id="@+id/completeButton"
        />
    </LinearLayout>
</LinearLayout>