<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6614d">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/settings_username"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/text_input"
            android:id="@+id/editUsername" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/settings_mobile"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/text_input"
            android:id="@+id/editPhoneNumber" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/settings_email"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/text_input"
            android:id="@+id/editEmail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_who_header"
            android:textColor="#fff"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:id="@+id/textView4"
            android:layout_gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textColor="#fff"
                android:text="@string/settings_only_friends"
                android:id="@+id/switchPrivacyMessage" />
        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:textColor="#fff"
            android:textSize="22dp"
            android:background="@drawable/yellow_btn"
            android:text="@string/settings_save_button"
            android:id="@+id/saveButton"
            android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>