<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6614d"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_marginBottom="30pt">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input"
            android:layout_marginTop="10pt"
            android:hint="@string/email_text"
            android:textSize="12pt"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input"
            android:layout_marginTop="10pt"
            android:hint="@string/password_text"
            android:textSize="12pt"
            android:ems="10"
            android:id="@+id/epasswordText"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup1_text"
            android:layout_marginTop="10pt"
            android:textColorLink="#FFF"
            android:textSize="8pt"
            android:textColor="#fff"
            android:width="135pt"
            android:id="@+id/textView"
           />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_btn"
            android:layout_marginTop="30dp"
            android:textColor="#fff"
            android:textSize="14pt"
            android:text="@string/continue_button"
            android:id="@+id/toStepTwoButton"
             />
    </LinearLayout>
</LinearLayout>