<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6614d">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="30pt">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input"
            android:layout_marginTop="10pt"
            android:hint="@string/username_text"
            android:textSize="12pt"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/usernameEditText"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup2_text"
            android:layout_marginTop="10pt"
            android:textSize="7pt"
            android:textColor="#fff"
            android:width="135pt"
            android:id="@+id/textView"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_button"
            android:layout_marginTop="30pt"
            android:textColor="#fff"
            android:textSize="14pt"
            android:text="@string/continue_button"
            android:id="@+id/toStepThreeButton"
            android:layout_gravity="center" />
    </LinearLayout>
</LinearLayout>