<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#d6614d"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".LoginActivity"
                android:focusable="false">

    <ImageButton
            android:layout_marginRight="0dp"
            android:id="@+id/closeBtn"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/close_button"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            />


    <LinearLayout

            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            >

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pass_text"
                    android:textSize="7pt"
                    android:textColor="#fff"
                    android:width="135pt"
                    android:id="@+id/textView"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp" />

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:hint="@string/email_text"
                    android:background="@drawable/edit_text"
                    android:textStyle="bold"
                    android:textSize="12pt"
                    android:width="20pt"
                    android:ems="10"
                    android:id="@+id/resetEmail"
                    android:singleLine="true"
                    android:textColorHint="#000000"
                    android:inputType="textEmailAddress"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/edit_text"
                    android:layout_marginTop="5pt"
                    android:hint="@string/phone_text"
                    android:textSize="12pt"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/resetPhone"
                    android:textColorHint="#000000"
                    android:textStyle="bold"/>

            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:width="40pt"
                    android:textStyle="bold"
                    android:text="@string/reset_pass_btn"
                    android:background="@drawable/login_btn"
                    android:textColor="#fff"
                    android:textSize="14pt"
                    android:id="@+id/resetPasswordButton"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
