<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6614d"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:focusable="false">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="30pt">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_text"
                    android:background="@drawable/text_input"
                    android:layout_marginTop="15pt"
                    android:textSize="12pt"
                    android:width="20pt"
                    android:ems="10"
                    android:id="@+id/emailInput"
                    android:singleLine="true"
                    android:textColorHint="#000000"
                    android:inputType="textEmailAddress"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_text"
                    android:textColorHint="#000000"
                    android:background="@drawable/text_input"
                    android:layout_marginTop="10pt"
                    android:textSize="12pt"
                    android:width="20pt"
                    android:ems="10"
                    android:id="@+id/passwordInput"
                    android:singleLine="true"
                    android:inputType="textPassword"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30pt"
                    android:width="40pt"
                    android:textStyle="bold"
                    android:text="@string/login_button_text"
                    android:background="@drawable/login_btn"
                    android:textColor="#fff"
                    android:textSize="14pt"
                    android:id="@+id/loginButton"
                    />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
